crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__starcoder_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
assertion_line: 219
expression: out
---
# You are a Python expert.
Write a sort function.
