crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__tinyllama_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|im_start|>system
You are a science tutor.<|im_end|>
<|im_start|>user
What is ATP?<|im_end|>
<|im_start|>assistant
