crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__vicuna_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions.

USER: Explain photosynthesis briefly.
ASSISTANT:
