crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__wizardlm_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a science tutor.

USER: What is ATP?
ASSISTANT:
